force-app/main/default/objects/FortnightlyForecastInventory__c/FortnightlyForecastInventory__c.object-meta.xml
<CustomObject>
    <label>FortnightlyForecastInventory</label>
    <nameField>
        <displayFormat>FFI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FortnightlyForecastInventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>