force-app/main/default/objects/FortnightlyForecastInventory__c/fields/Available_Inventory_Qty__c.field-meta.xml
<CustomField>
    <fullName>Available_Inventory_Qty__c</fullName>
    <label>Available Inventory Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>