force-app/main/default/objects/FortnightlyForecastInventory__c/fields/Batch_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Executed_Date__c</fullName>
    <label>Batch Executed Date</label>
    <type>Date</type>
</CustomField>