force-app/main/default/objects/FortnightlyForecastInventory__c/fields/CarryForward_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CarryForward_Quantity__c</fullName>
    <label>CarryForward Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>