force-app/main/default/objects/FortnightlyForecastInventory__c/fields/Dealer_Product_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Product_Forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Product Forecast</label>
    <referenceTo>Dealer_Product_Forecast__c</referenceTo>
    <relationshipLabel>FortnightlyForecastInventory</relationshipLabel>
    <relationshipName>FortnightlyForecastInventory</relationshipName>
    <type>Lookup</type>
</CustomField>