force-app/main/default/objects/FortnightlyForecastInventory__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End_Date</label>
    <type>Date</type>
</CustomField>