force-app/main/default/objects/FortnightlyForecastInventory__c/fields/Final_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Final_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Forecast</label>
    <type>Checkbox</type>
</CustomField>