force-app/main/default/objects/FortnightlyForecastInventory__c/fields/First_Consumed_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Consumed_Date__c</fullName>
    <label>First Consumed Date</label>
    <type>Date</type>
</CustomField>