force-app/main/default/objects/FortnightlyForecastInventory__c/fields/First_Half_Qty__c.field-meta.xml
<CustomField>
    <fullName>First_Half_Qty__c</fullName>
    <label>First_Half_Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>