force-app/main/default/objects/FortnightlyForecastInventory__c/fields/MOQ_Applied__c.field-meta.xml
<CustomField>
    <fullName>MOQ_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MOQ Applied</label>
    <type>Checkbox</type>
</CustomField>