force-app/main/default/objects/FortnightlyForecastInventory__c/fields/Pending_Forecast_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Pending_Forecast_Quantity__c</fullName>
    <formula>Six_Months_Average_Consumption__c - Quantity_Ordered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Forecasted Qty - PO Qty</inlineHelpText>
    <label>Pending Forecast Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>