force-app/main/default/objects/FortnightlyForecastInventory__c/fields/PO_Status__c.field-meta.xml
<CustomField>
    <fullName>PO_Status__c</fullName>
    <label>PO Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>GRN Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>