force-app/main/default/objects/FortnightlyForecastInventory__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>ProductRequest</referenceTo>
    <relationshipLabel>FortnightlyForecastInventory</relationshipLabel>
    <relationshipName>FortnightlyForecastInventory</relationshipName>
    <type>Lookup</type>
</CustomField>