force-app/main/default/objects/FortnightlyForecastInventory__c/fields/Six_Months_Average_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Six_Months_Average_Consumption__c</fullName>
    <label>Six Months Average Consumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>