force-app/main/default/objects/FortnightlyForecastInventory__c/fields/Total_6_Month_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Total_6_Month_Consumption__c</fullName>
    <label>Total 6 Month Consumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>