force-app/main/default/objects/FortnightlyForecastInventory__c/fields/Total_Consumption_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_Consumption_Months__c</fullName>
    <label>Total Consumption Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>