force-app/main/default/objects/FortnightlyForecastInventory__c/fields/Total_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty__c</fullName>
    <label>Total_Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>