force-app/main/default/objects/FortnightlyForecastInventory__c/fields/Very_First_Consumption_Date__c.field-meta.xml
<CustomField>
    <fullName>Very_First_Consumption_Date__c</fullName>
    <label>Very First Consumption Date</label>
    <type>Date</type>
</CustomField>