force-app/main/default/objects/FortnightlyForecastInventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>First_Consumed_Date__c</columns>
    <columns>Six_Months_Average_Consumption__c</columns>
    <columns>MOQ_Applied__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>